--- a/app/src/main/res/layout/row_places.xml
+++ b/app/src/main/res/layout/row_places.xml
@@ -1,122 +1,131 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView  xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:app="http://schemas.android.com/apk/res-auto"
-  xmlns:tools="http://schemas.android.com/tools"
-  android:layout_width="match_parent"
-  android:layout_height="wrap_content"
-  android:layout_marginTop="10dp"
-  android:layout_marginBottom="10dp"
-  android:layout_marginStart="10dp"
-  android:layout_marginEnd="10dp"
-  android:foreground="?attr/selectableItemBackground"
-  android:clickable="true"
-  android:focusable="true">
-
-<android.support.constraint.ConstraintLayout
-  android:layout_width="match_parent"
-  android:layout_height="wrap_content">
-
-
-  <ImageView
-    android:id="@+id/restaurant_img"
-    android:layout_width="100dp"
-    android:layout_height="90dp"
-    android:layout_marginTop="0dp"
-    android:layout_marginBottom="0dp"
-    android:layout_marginStart="16dp"
-    android:layout_marginLeft="16dp"
-    app:layout_constraintBottom_toBottomOf="@+id/imageView3"
-    app:layout_constraintLeft_toLeftOf="parent"
-    app:layout_constraintTop_toTopOf="@+id/name_tv"
-    app:srcCompat="@android:drawable/sym_def_app_icon" />
-  <TextView
-    android:id="@+id/name_tv"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="Nombre"
-    android:textColor="@color/cardview_dark_background"
-    android:textStyle="bold"
-    android:textSize="20sp"
-    app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintLeft_toRightOf="@+id/restaurant_img"
-    android:layout_marginLeft="10dp"
-    android:layout_marginStart="8dp"
-    android:layout_marginTop="8dp" />
-  <TextView
-    android:id="@+id/type_tv"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="Tipo"
-    android:textStyle="italic"
-    android:textSize="15sp"
-    app:layout_constraintTop_toBottomOf="@+id/name_tv"
-    app:layout_constraintLeft_toLeftOf="@+id/name_tv" />
-  <TextView
-    android:id="@+id/address_tv"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="0dp"
-    android:layout_marginEnd="8dp"
-    android:layout_marginLeft="8dp"
-    android:layout_marginRight="8dp"
-    android:text="Direccion"
-    android:textAlignment="textStart"
-    android:textColor="@color/cardview_dark_background"
-    app:layout_constraintHorizontal_bias="0.474"
-    app:layout_constraintLeft_toRightOf="@+id/imageView2"
-    app:layout_constraintRight_toRightOf="parent"
-    app:layout_constraintTop_toTopOf="@+id/imageView2" />
-  <TextView
-    android:id="@+id/hours_tv"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="0dp"
-    android:layout_marginEnd="8dp"
-    android:layout_marginLeft="8dp"
-    android:layout_marginRight="8dp"
-    android:text="Horario"
-    android:textAlignment="textStart"
-    android:textColor="@color/cardview_dark_background"
-    app:layout_constraintHorizontal_bias="1.0"
-    app:layout_constraintLeft_toLeftOf="@+id/address_tv"
-    app:layout_constraintRight_toRightOf="parent"
-    app:layout_constraintTop_toTopOf="@+id/imageView3"
-    tools:layout_editor_absoluteX="130dp" />
-  <TextView
-    android:id="@+id/phone_tv"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="Telefono"
-    android:textStyle="italic"
-    android:layout_marginEnd="8dp"
-    app:layout_constraintLeft_toRightOf="@+id/type_tv"
-    android:layout_marginLeft="8dp"
-    android:layout_marginTop="0dp"
-    app:layout_constraintTop_toBottomOf="@+id/name_tv"
-    android:layout_marginRight="8dp"
-    app:layout_constraintRight_toRightOf="parent"
-    app:layout_constraintHorizontal_bias="0.1" />
-  <ImageView
-    android:id="@+id/imageView2"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    app:srcCompat="@drawable/ic_room_black_18dp"
-    android:layout_marginTop="8dp"
-    app:layout_constraintTop_toBottomOf="@+id/type_tv"
-    android:layout_marginLeft="0dp"
-    app:layout_constraintLeft_toLeftOf="@+id/type_tv" />
-  <ImageView
-    android:id="@+id/imageView3"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    app:srcCompat="@drawable/ic_snooze_black_18dp"
-    app:layout_constraintBottom_toBottomOf="parent"
-    android:layout_marginBottom="8dp"
-    android:layout_marginLeft="0dp"
-    app:layout_constraintLeft_toLeftOf="@+id/imageView2"
-    android:layout_marginTop="8dp"
-    app:layout_constraintTop_toBottomOf="@+id/address_tv"
-    app:layout_constraintVertical_bias="0.533" />
-</android.support.constraint.ConstraintLayout>
+    android:layout_marginBottom="10dp"
+    android:layout_marginEnd="10dp"
+    android:layout_marginStart="10dp"
+    android:layout_marginTop="10dp"
+    android:clickable="true"
+    android:focusable="true"
+    android:foreground="?attr/selectableItemBackground">
 
-</android.support.v7.widget.CardView >
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+
+        <ImageView
+            android:id="@+id/restaurant_img"
+            android:layout_width="100dp"
+            android:layout_height="90dp"
+            android:layout_marginLeft="0dp"
+            android:layout_marginStart="16dp"
+            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/name_tv"
+            app:srcCompat="@android:drawable/sym_def_app_icon" />
+
+        <TextView
+            android:id="@+id/name_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:text="Nombre"
+            android:textColor="@color/cardview_dark_background"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintLeft_toRightOf="@+id/restaurant_img"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/type_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Tipo"
+            android:textSize="15sp"
+            android:textStyle="italic"
+            app:layout_constraintLeft_toLeftOf="@+id/name_tv"
+            app:layout_constraintTop_toBottomOf="@+id/name_tv" />
+
+        <TextView
+            android:id="@+id/address_tv"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginStart="8dp"
+            android:text="Direccion"
+            android:textAlignment="textStart"
+            android:textColor="@color/cardview_dark_background"
+            app:layout_constraintHorizontal_bias="0.474"
+            app:layout_constraintLeft_toRightOf="@+id/imageView2"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/imageView2" />
+
+        <TextView
+            android:id="@+id/hours_tv"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="0dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="0dp"
+            android:text="Horario"
+            android:textAlignment="textStart"
+            android:textColor="@color/cardview_dark_background"
+            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintLeft_toRightOf="@+id/imageView3"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/imageView3" />
+
+        <TextView
+            android:id="@+id/phone_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginStart="8dp"
+            android:text="Telefono"
+            android:textStyle="italic"
+            app:layout_constraintHorizontal_bias="0.1"
+            app:layout_constraintLeft_toRightOf="@+id/type_tv"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/name_tv" />
+
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            app:layout_constraintLeft_toLeftOf="@+id/type_tv"
+            app:layout_constraintTop_toBottomOf="@+id/type_tv"
+            app:srcCompat="@drawable/ic_room_black_18dp" />
+
+        <ImageView
+            android:id="@+id/imageView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:layout_marginTop="16dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="@+id/imageView2"
+            app:layout_constraintTop_toBottomOf="@+id/address_tv"
+            app:layout_constraintVertical_bias="1.0"
+            app:srcCompat="@drawable/ic_snooze_black_18dp"
+            android:layout_marginLeft="0dp" />
+    </android.support.constraint.ConstraintLayout>
+
+</android.support.v7.widget.CardView>
