--- a/app/src/main/res/layout/custom_dialog.xml
+++ b/app/src/main/res/layout/custom_dialog.xml
@@ -20,15 +20,18 @@
 
     <TextView
         android:id="@+id/dialog_name_tv"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="0dp"
-        android:textSize="25sp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="-7dp"
         android:text="Nombre"
         android:textColor="@color/cardview_dark_background"
+        android:textSize="25sp"
         android:textStyle="bold"
+        app:layout_constraintHorizontal_bias="0.055"
         app:layout_constraintLeft_toRightOf="@+id/place_image"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@+id/place_image" />
 
     <TextView
